# SmartHome

./: README.md
Controller/: Makefile.am  configure  configure.ac
Controller/autom4te.cache/: output.0  output.3  requests  traces.1
Controller/include/: gpio.h  mqttClient.h  tools.h
Controller/lib/: Makefile.am  Makefile.in  gpio.c  mqttClient.c  tools.c
Controller/src/: Makefile.am  Makefile.in  src.c
SmartView/: app.js
SmartView/public/scripts/: smartView.js
